force-app/main/default/objects/Subscription_Charge__c/Subscription_Charge__c.object-meta.xml
<CustomObject>
    <label>Subscription Charge</label>
    <nameField>
        <label>Failed Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>