force-app/main/default/objects/Subscription_Charge__c/fields/bank_account_name__c.field-meta.xml
<CustomField>
    <fullName>bank_account_name__c</fullName>
    <label>bank account name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>