force-app/main/default/objects/Subscription_Charge__c/fields/brightwheel_organization_uuid__c.field-meta.xml
<CustomField>
    <fullName>brightwheel_organization_uuid__c</fullName>
    <label>brightwheel organization uuid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>