force-app/main/default/objects/Subscription_Charge__c/fields/charge_amount__c.field-meta.xml
<CustomField>
    <fullName>charge_amount__c</fullName>
    <label>charge amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>