force-app/main/default/objects/Subscription_Charge__c/fields/charge_attempt_count__c.field-meta.xml
<CustomField>
    <fullName>charge_attempt_count__c</fullName>
    <label>charge attempt count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>