force-app/main/default/objects/Subscription_Charge__c/fields/charge_created_at__c.field-meta.xml
<CustomField>
    <fullName>charge_created_at__c</fullName>
    <label>charge created at</label>
    <type>DateTime</type>
</CustomField>