force-app/main/default/objects/Subscription_Charge__c/fields/charge_failure_message__c.field-meta.xml
<CustomField>
    <fullName>charge_failure_message__c</fullName>
    <label>charge failure message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>