force-app/main/default/objects/Subscription_Charge__c/fields/charge_id__c.field-meta.xml
<CustomField>
    <fullName>charge_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>charge_id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>