force-app/main/default/objects/Subscription_Charge__c/fields/charge_outcome_network_status__c.field-meta.xml
<CustomField>
    <fullName>charge_outcome_network_status__c</fullName>
    <label>charge outcome network status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>