force-app/main/default/objects/Subscription_Charge__c/fields/charge_outcome_reason__c.field-meta.xml
<CustomField>
    <fullName>charge_outcome_reason__c</fullName>
    <label>charge outcome reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>