force-app/main/default/objects/Subscription_Charge__c/fields/charge_outcome_seller_message__c.field-meta.xml
<CustomField>
    <fullName>charge_outcome_seller_message__c</fullName>
    <label>charge outcome seller message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>