force-app/main/default/objects/Subscription_Charge__c/fields/charge_outcome_type__c.field-meta.xml
<CustomField>
    <fullName>charge_outcome_type__c</fullName>
    <label>charge outcome type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>