force-app/main/default/objects/Subscription_Charge__c/fields/charge_status__c.field-meta.xml
<CustomField>
    <fullName>charge_status__c</fullName>
    <label>charge status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>