force-app/main/default/objects/Subscription_Charge__c/fields/invoice_id__c.field-meta.xml
<CustomField>
    <fullName>invoice_id__c</fullName>
    <externalId>true</externalId>
    <label>invoice id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>