force-app/main/default/objects/Subscription_Charge__c/fields/invoice_next_attempt_count__c.field-meta.xml
<CustomField>
    <fullName>invoice_next_attempt_count__c</fullName>
    <label>invoice next attempt count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>