force-app/main/default/objects/Subscription_Charge__c/fields/invoice_next_payment_attempt__c.field-meta.xml
<CustomField>
    <fullName>invoice_next_payment_attempt__c</fullName>
    <label>invoice next payment attempt</label>
    <type>DateTime</type>
</CustomField>