force-app/main/default/objects/Subscription_Charge__c/fields/payment_method_billing_details_name__c.field-meta.xml
<CustomField>
    <fullName>payment_method_billing_details_name__c</fullName>
    <label>payment method billing details name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>