force-app/main/default/objects/Subscription_Charge__c/fields/payment_method_card_funding__c.field-meta.xml
<CustomField>
    <fullName>payment_method_card_funding__c</fullName>
    <label>payment method card funding</label>
    <length>100</length>
    <type>Text</type>
</CustomField>