force-app/main/default/objects/Subscription_Charge__c/fields/stripe_customer_email__c.field-meta.xml
<CustomField>
    <fullName>stripe_customer_email__c</fullName>
    <label>stripe customer email</label>
    <type>Email</type>
</CustomField>