force-app/main/default/objects/Subscription_Charge__c/fields/stripe_customer_id__c.field-meta.xml
<CustomField>
    <fullName>stripe_customer_id__c</fullName>
    <externalId>true</externalId>
    <label>stripe customer id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>