force-app/main/default/objects/Subscription_Charge__c/fields/target_designation__c.field-meta.xml
<CustomField>
    <fullName>target_designation__c</fullName>
    <label>target designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>