force-app/main/default/objects/Subscription_Charge__c/listViews/Failed.listView-meta.xml
<ListView>
    <fullName>Failed</fullName>
    <columns>charge_created_at__c</columns>
    <columns>payment_method_billing_details_name__c</columns>
    <columns>stripe_customer_email__c</columns>
    <columns>charge_amount__c</columns>
    <columns>charge_attempt_count__c</columns>
    <columns>charge_status__c</columns>
    <columns>bank_account_name__c</columns>
    <columns>payment_method_card_brand__c</columns>
    <columns>payment_method_card_funding__c</columns>
    <columns>charge_failure_code__c</columns>
    <columns>brightwheel_organization_uuid__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>charge_status__c</field>
        <operation>equals</operation>
        <value>failed</value>
    </filters>
    <label>Failed</label>
</ListView>